<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Check calculator</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_item">Add item</string>
    <string name="totalPriceText">Total:</string>
    <string name="quantityHeader">Quantity</string>
    <string name="addButtonHeader">Add</string>
    <string name="priceHeader">Price</string>
    <string name="itemNameHeader">Item name</string>
    <string name="addItemMenuButton">Add item</string>
    <string name="menuRemoveAll">Remove all items</string>
    <string name="deleteItemCaption">Delete item</string>
    <string name="deleteItemBody">Do you really want to delete this item?</string>
    <string name="deleteAllCaption">Delete all</string>
    <string name="deleteAllBody">Do you really want to delete all items?</string>
    <string name="updateButton">Update</string>
    <string name="emptyListMessage">List is empty.\nTap + to add something.</string>
    <string name="updateHeader">Update item</string>
    <string name="menuAbout">About</string>
    <string name="title_activity_about">About</string>
    <string name="aboutCaptionAuthorName">Aleksandr Barshevsky</string>
    <string name="aboutDonatePaypalLink"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=ZN44ERVH8FVE2&amp;lc=US&amp;item_name=Sheffsky&amp;currency_code=USD&amp;bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHosted">Donate a beer</a> :)</string>
    <string name="aboutCaptionAuthorPrep">Author</string>
    <string name="showMoreButtonCaption">Show more</string>
    <string name="personsQuantityHeader">Persons</string>
    <string name="quantityOfPeopleHeader">/ People</string>
    <string name="showPersonsHint">Show persons</string>
    <string name="hideCaption">Hide</string>
    <string name="qtyNumberText">1</string>
    <string name="personQtyText">1</string>
    <string name="dividerText">/</string>
    <string name="plusButtonDescription">plus</string>
    <string name="minusButtonDescription">minus</string>
    <string name="editButtonDescription">edit</string>
    <string name="deleteButtonDescription">delete</string>

</resources>
