<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ru.sheffsky.barcounter.AddItemActivity"
    android:id="@+id/addItemLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/itemNameHeader"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/newItemName"
        android:layout_below="@+id/textView"
        android:singleLine="true"
        android:layout_centerHorizontal="true"
        android:elegantTextHeight="true"
        android:inputType="textCapSentences"
        android:outlineProvider="background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/priceHeader"
        android:id="@+id/textView2"
        android:layout_below="@+id/newItemName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" />

    <EditText
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/newItemPrice"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/quantityHeader"
        android:id="@+id/textView3"
        android:layout_below="@+id/newItemPrice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addButtonHeader"
        android:id="@+id/okButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newItemQty"
        android:orientation="vertical"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
