<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:id="@+id/itemLayout">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/relativeLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/additionalButtonsLayout"
        android:onClick="onItemClick">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/itemName"
            android:text=""
            android:singleLine="true"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:ellipsize="marquee"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/itemQty"
            android:textSize="22sp"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/itemPrice"
            android:layout_marginStart="70dp"
            android:layout_below="@+id/itemName"
            android:layout_alignParentStart="true"
            android:textSize="18sp"
            android:textColor="@android:color/holo_blue_bright"
            android:ellipsize="marquee" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/plusButton"
            android:src="@drawable/ic_plus_circle_outline_grey600_36dp"
            android:onClick="onPlusButtonClick"
            android:descendantFocusability="blocksDescendants"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/plusButtonDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/itemQty"
            android:textSize="40sp"
            android:layout_alignParentTop="false"
            android:layout_toStartOf="@+id/plusButton"
            android:layout_marginEnd="5dp"
            android:layout_alignBottom="@+id/plusButton" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="120dp"
        android:layout_height="fill_parent"
        android:id="@+id/additionalButtonsLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/minusButton"
            android:src="@drawable/ic_minus_circle_outline_grey600_36dp"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:onClick="onMinusButtonClick"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/editButton"
            android:background="@android:color/transparent"
            android:contentDescription="@string/minusButtonDescription" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/editButton"
            android:src="@android:drawable/ic_menu_edit"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:onClick="onEditButtonClick"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/deleteButton"
            android:background="@android:color/transparent"
            android:contentDescription="@string/editButtonDescription" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/deleteButton"
            android:src="@android:drawable/ic_menu_delete"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:onClick="onDeleteButtonClick"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/deleteButtonDescription" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/itemId"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:visibility="gone" />


</RelativeLayout>

